--- a/css/custom.css
+++ b/css/custom.css
@@ -9,3 +9,11 @@
    height:500px;
    display: block;
 }
+
+#footer {
+position: absolute;
+bottom: 0;
+width: 100%;
+height: 60px;
+background-color: #f5f5f5;
+}
