--- a/css/custom.css
+++ b/css/custom.css
@@ -10,10 +10,7 @@
    display: block;
 }
 
-#footer {
-position: absolute;
-bottom: 0;
-width: 100%;
-height: 60px;
-background-color: #f5f5f5;
+footer{
+	margin-top:670px;
+	text-align: center;
 }
