--- a/css/custom.css
+++ b/css/custom.css
@@ -7,6 +7,12 @@
 .form-control#editor{
    width: 80%;
    height:500px;
+   margin-top:10px;
+   display: block;
+}
+.form-control#name{
+   width: 20%;
+   height:40px;
    display: block;
 }
 
