--- a/css/custom.css
+++ b/css/custom.css
@@ -13,18 +13,16 @@
 .form-control#name{
    width: 20%;
    height:40px;
-   display: block;
+   display: inline;
 }
 
-<<<<<<< HEAD
+#savebutton{
+	display:inline;
+	margin-left:10px;
+	height: 40px;
+}
+
 footer{
 	margin-top:670px;
 	text-align: center;
-=======
-#footer {
-bottom: 0;
-width: 100%;
-height: 60px;
-background-color: #f5f5f5;
->>>>>>> f79406791b64170428af7d1ff09ba410f604658b
 }
